# strands-agent-on-aws-lambda

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  build_layer.py  cdk.json  deploy.sh  deploy_config.json  lambda_function.py  pyproject.toml  requirements.txt  sample_event.json
.github/workflows/: ci.yml  deploy.yml
lambda/: config.py  custom_tools.py  lambda_function.py  tools.py  utils.py
stacks/: strands_agent_stack.py
tests/: README.md  conftest.py  test_custom_tools.py  test_import.py  test_lambda.py  test_local.py  test_local_with_custom_tools.py  test_strands_agent.py  test_strands_tools.py  test_tools.py  test_tools_only.py
